# amr-whisper

./: .gitignore  README.md  constraints.txt  dataset.py  model.py  modeling_aed.py  pyproject.toml  rename_files_with_folder_name.py  requirements.txt  result.csv  run.py  test_data_process.py  train.py  vocab.json  vocab.py  whisper.ipynb  whisper.py
figs/: model.ai
test_data/16APSK/: data_17991.csv  data_17993.csv  data_17994.csv  data_17996.csv  data_17997.csv  data_17998.csv  data_17999.csv  data_18000.csv
test_data/16QAM/: data_17994.csv  data_17996.csv  data_17997.csv  data_17998.csv  data_18000.csv
test_data/32APSK/: data_17991.csv  data_17992.csv  data_17993.csv  data_17995.csv  data_17996.csv  data_17997.csv  data_17999.csv  data_18000.csv
test_data/32QAM/: data_17992.csv  data_17994.csv  data_17998.csv  data_17999.csv  data_18000.csv
test_data/8APSK/: data_17992.csv  data_17993.csv  data_17995.csv  data_17996.csv  data_17997.csv  data_17999.csv  data_18000.csv
test_data/8PSK/: data_17992.csv  data_17993.csv  data_17994.csv  data_17995.csv  data_17997.csv  data_17998.csv  data_17999.csv
test_data/8QAM/: data_17991.csv  data_17992.csv  data_17993.csv  data_17994.csv  data_17995.csv  data_17996.csv  data_17997.csv  data_17998.csv  data_17999.csv
test_data/BPSK/: data_17991.csv  data_17994.csv  data_17995.csv  data_17996.csv  data_17997.csv  data_17998.csv  data_17999.csv
test_data/MSK/: data_17991.csv  data_17996.csv  data_17998.csv  data_17999.csv
test_data/QPSK/: data_17992.csv  data_17993.csv  data_17996.csv  data_17997.csv
test_data/test/: 8PSK_data_17991.csv  (+35 more)
tests/: test_model.py
(+1 files in other folders)
