[project]
name = "WahahahaReceiver"
version = "0.1.0"
description = "WahahahaReceiver is a deep learning model for receiving signals modulated in I/Q format."
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    "einops>=0.8.0",
    "lightning>=2",
    "matplotlib>=3",
    "pandas>=2",
    "torch>=2.1",
    "transformers>=4.1.0",
]

[project.optional-dependencies]
train = [
    "fire>=0.7.0",
    "wandb>=0.19.1",
    "accelerate>=1.0.0",
]
