[project]
name = "WahahahaReceiver"
version = "0.1.0"
description = "WahahahaReceiver is a deep learning model for receiving signals modulated in I/Q format."
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    "einops>=0.8.0",
    "lightning>=2",
    "matplotlib>=3",
    "pandas>=2",
    "pytest>=8.3.4",
    "torch>=2.1",
    "transformers>=4.1.0",
]

[project.optional-dependencies]
train = [
    "fire>=0.7.0",
    "tensorboard>=2.18.0; python_version >= '3.9'",
    "accelerate>=1.1.0; python_version >= '3.9'",
    "flash-attn>=2",
    "ipykernel",
]

[tool.uv]
no-build-isolation-package = ['flash-attn']
